# bevy_asefile

./: Cargo.toml  README.md
assets/: characters.ase  characters.aseprite  ui.aseprite
examples/: simple.rs  ui.rs
src/: assets.rs  components.rs  lib.rs  loaders.rs  plugins.rs  systems.rs  utils.rs
src/ui/: components.rs  systems.rs
