[package]
name = "bevy_asefile"
version = "0.2.0"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
exclude = ["assets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
bevy = { version = "0.11", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui"
] }
asefile = "0.3.6"
image = { version = "0.23", default-features = false }

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
bevy = { version = "0.11", features = ["wayland", "dynamic_linking"] }
